developer link changed

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             >
           </li>
         </ul>
-        <a href="http://tech-plexus.com/" class="ftrLogo" target="_blank"
+        <a href="http://facebook.com/amzadprofile/" class="ftrLogo" target="_blank"
           ><img class="amzad" src="images/amzad.png" alt="Md Amzad Hossain."
         /></a>
       </div>
